...
            // disable the scale bar that is anyways under the search bar.
            scaleBar = { ScaleBarSettings.Builder().setEnabled(false).build() },
            modifier = Modifier.fillMaxSize().padding(padding).testTag("MapScreen"),
            mapViewportState = mapViewportState,
            style = { MapConfig.DefaultStyle() }) {
...
        Box(modifier = Modifier.padding(padding).fillMaxSize()) {
          if (showPreviewCard) {
            PreviewCard(navigationActions, parkingViewModel)
          }
          // Center button if location is enabled
...
                      icon = Icons.Default.MyLocation,
                      contentDescription = "Recenter on Location",
                      modifier = Modifier.testTag("recenterButton"),
                      onClick = {
                        showPreviewCard = false
...
                },
                colorLevel = ColorLevel.PRIMARY,
                testTag = "addButton")
          }

...
                        Text(text = stringResource(R.string.search_bar_placeholder))
                      },
                      modifier = Modifier.weight(1f).height(56.dp).testTag("SearchBar"),
                      shape = RoundedCornerShape(16.dp),
                      colors = getOutlinedTextFieldColorsSearchBar(ColorLevel.PRIMARY),
...
                Box(modifier = Modifier.size(56.dp).padding(start = 5.dp)) {
                  SmallFloatingActionButton(
                      modifier = Modifier.matchParentSize().testTag("FilterButton"),
                      onClick = { showFilter.value = true },
                      icon = Icons.Default.FilterList,
...
                      modifier =
                          Modifier.matchParentSize() // Fill the parent Box
                              .testTag("SettingsMenuButton"),
                      onClick = { showSettings.value = true },
                      icon = Icons.Filled.Settings,
...
  ModalBottomSheet(
      onDismissRequest = { showSuggestions.value = false },
      modifier = Modifier.testTag("SuggestionsMenu"),
      dragHandle = { SuggestionsMenuDragHandle() }) {
        LazyColumn(
...
            Box(modifier = Modifier.width(64.dp), contentAlignment = Alignment.CenterStart) {
              Switch(
                  modifier = Modifier.testTag("advancedModeSwitch"),
                  checked = mapMode.value.isAdvancedMode,
                  onCheckedChange = {
...
                        onDismiss()
                      }
                      .testTag("SettingsToZoneRow")) {
                Box(modifier = Modifier.width(64.dp), contentAlignment = Alignment.CenterStart) {
                  Icon(
...
      containerColor = MaterialTheme.colorScheme.surface,
      tonalElevation = 8.dp,
      modifier = Modifier.testTag("SettingsMenu"),
      shape = RoundedCornerShape(24.dp))
}
...
      },
      confirmButton = {
        TextButton(onClick = onDismiss, modifier = Modifier.testTag("FilterMenuClose")) {
          Text(stringResource(R.string.close))
        }
...
      containerColor = MaterialTheme.colorScheme.surface,
      tonalElevation = 8.dp,
      modifier = Modifier.testTag("FilterMenu"),
      shape = RoundedCornerShape(24.dp))
}
...
                    color = MaterialTheme.colorScheme.onSurface,
                    textAlign = TextAlign.Left,
                    testTag = "PreviewCardTitle")
                if (parking.nbReviews == 0) {
                  Text(
...
                    style = MaterialTheme.typography.bodyMedium,
                    textAlign = TextAlign.Left,
                    testTag = "PreviewCardRackType")

                // Text for protection
...
                    style = MaterialTheme.typography.bodyMedium,
                    textAlign = TextAlign.Left,
                    testTag = "PreviewCardProtection")

                // Text for description
...
                    style = MaterialTheme.typography.bodyMedium,
                    textAlign = TextAlign.Left,
                    testTag = "PreviewCardCapacity")

                // Go to parking details button
...
                    modifier = Modifier.fillMaxWidth().padding(top = 8.dp),
                    text = stringResource(R.string.map_screen_details_button),
                    testTag = "PreviewCardDetailsButton")
              }
        }
...
