...
@Composable
fun BottomNavigationBar(
    navigationActions: NavigationActions,
    tabList: List<TopLevelDestination> = LIST_TOP_LEVEL_DESTINATION,
    onTabSelect: (TopLevelDestination) -> Unit = { navigationActions.navigateTo(it) },
    selectedItem: String,
    testTag: String = "NavigationBar"
) {
  NavigationBar(
      modifier = Modifier.testTag(testTag).fillMaxWidth().height(60.dp),
      containerColor = MaterialTheme.colorScheme.surfaceContainer,
      content = {
        tabList.forEach { tab ->
...
